--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ html {
 
 .dark {
   --color-1: #ffffff;
-  --color-1-main: #ffffff;
+  --color-1-main: #37c3ae;
   --color-1-bg: rgb(7, 8, 7);
 
   --linear-bg-1:  linear-gradient(90deg, #087fc9 0%, #0cc56f 100%);
@@ -1000,7 +1000,7 @@ color: #ffffff !important;
 
 
 #projects ul li{
-
+  color: var(--color-2-body);
   margin-right: 7px;
   padding: 3px;
   font-size: 14px;
