--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,11 @@ html {
   --color-1-main:#ffffff;
   --color-1-bg: rgb(7, 8, 7);
 
-  --linear-bg-1:  linear-gradient(90deg, #1387d9 -16%, #17e658 116%);
+  --linear-bg-1:  linear-gradient(90deg,  #0bff58 -46%,  #1575ea 130%);
   --linear-bg-2: linear-gradient(90deg, #0c97ed15 0%, #07df7a27 100%);
   --color-2-body:#ffffff;
-  --color-2-bg: #242424;
-  --color-2-bg-banner:#4a4a4af0;
+  --color-2-bg: #1e1e1e;
+  --color-2-bg-banner:#212121f0;
   --color-2-bg-img-div:#ffffff56;
 }
 
@@ -115,11 +115,9 @@ body .float-buttons{
   right: 0px;
   bottom:12%;
   
-  background-color: var(--color-2-bg);
-  box-shadow: 0px 3px 6px -6px var(--color-2-body);
-  -webkit-box-shadow: 0px 3px 6px -6px var(--color-2-body);
-  -moz-box-shadow: 0px 3px 6px -6px var(--color-2-body);
-  border: 1px solid #a8a8a85c;
+  background-color: var(--color-2-bg-banner);
+
+  border: 1px solid #69696947;
   border-right: 0;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
@@ -296,7 +294,7 @@ header nav .active{
 }
 
 
-header nav .active p{
+header nav .active p, header nav .active i{
   text-shadow: 2px 1px #595959b4;
 }
 
@@ -1159,10 +1157,7 @@ text-shadow: 2px 1px #595959b4;
 
 
   #projects h3:hover{
-  background: var(--linear-bg-1);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: 0px 0px #00000000;
+  color: var(--color-1-main);
 }
 
 
@@ -1754,7 +1749,7 @@ padding: 0 !important;
   
       width: 100%;
       text-align: center;
-      background-color: var(--color-2-bg);
+      background-color: var(--color-2-bg-banner);
       padding: 1vh;
       padding-bottom: 5px;
       box-shadow: 0px 3px 4px 1px var(--color-2-body);
@@ -1896,6 +1891,7 @@ padding: 0 !important;
     height: 190px;
 
   }
+
 
   #projects .icon-section{
     margin-top: 2px;
@@ -2253,7 +2249,7 @@ top:40px;
   .research-title{
     margin-left: 10px;
     margin-right: 10px;
-    font-size: 18px !important;
+    font-size: 16px !important;
     line-height: 1.3rem;
   }
 
@@ -2272,11 +2268,11 @@ top:40px;
   }
   
   .next{
-    left: 40%;
+    left: 42%;
   }
   
   .prev{
-    left: -36%;
+    left: -38%;
   }
 
   .numbertext{
