--- a/css/projects.css
+++ b/css/projects.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
-  min-height: 700px;
   padding: 10%;
   color: var(--color-body);
 }
@@ -26,7 +25,7 @@
   justify-content: center;
   padding: 16px;
   text-align: center;
-  max-width: 100%;
+  
   background-color: var(--bg-banner);
   border: 1px solid var(--color-border);
   margin-bottom: 18px;
@@ -35,9 +34,15 @@
 }
 
 
+.projectsItem:hover {
+  border-color: var(--color-main);
+}
+
+
 .hangmanImg{
   width: 100%;
-  height: 200px;
+  max-width: 600px;
+  height: 40vh;
   display: flex;
   background-repeat: no-repeat;
   background-size: cover;
@@ -50,7 +55,8 @@
 
 .encryptorImg{
   width: 100%;
-  height: 200px;
+  max-width: 600px;
+  height: 40vh;
   display: flex;
   background-repeat: no-repeat;
   background-size: cover;
@@ -64,7 +70,8 @@
 
 .portfolioImg{
   width: 100%;
-  height: 200px;
+  max-width: 600px;
+  height: 40vh;
   display: flex;
   background-repeat: no-repeat;
   background-size: cover;
@@ -90,9 +97,9 @@ font-size: 1.3rem;
 
 }
 
-.projectsItem__iconsContainer ul {
+.projectsItem__iconsContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   padding-top: 10px;
   padding-bottom: 16px;
@@ -101,7 +108,33 @@ font-size: 1.3rem;
 }
 
 
-.projectsItem__iconsContainer i{
+
+.projectsItem__info{
+  display: none;
+}
+
+
+.projectsItem__info h3{
+ color: var(--color-main);
+}
+
+.projectsItem__description{
+  margin-top: 15px;
+  font-size: 0.9rem;
+  line-height: 1.3rem;
+
+}
+
+
+.projectsItem__iconsContainer ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  min-height: 30px;
+
+}
+
+.usedTech i{
   display: none;
 }
 
@@ -147,6 +180,87 @@ font-size: 1.3rem;
   margin-right: 8px;
 }
 
+
+
+
+
+@media screen and (min-width: 822px){
+
+
+  .projectsContainer{
+    padding-top: 5%;
+    padding-bottom: 3%;
+  }
+
+  .projectsItem{
+  flex-direction: row-reverse;
+  justify-content: space-between;
+ }
+
+.box {
+ display: none;
+
+}
+
+
+.projectsItem__info{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.hangmanImg, .encryptorImg, .portfolioImg {
+  max-width: 400px;
+
+
+}
+
+
+
+.projectsItem__iconsContainer {
+  flex-direction: column;
+  width: 260px;
+  padding: 50px 20px 50px 20px;
+  border: 0;
+
+}
+
+
+.usedTech i{
+  display: block;
+  font-size: 1.8rem;
+  margin-bottom: 6px;
+}
+
+.projectsItem__iconsContainer {
+  flex-direction: column;
+  width: 260px;
+  padding: 20px;
+  border: 0;
+
+}
+/* .projectsItem__buttonContainer a{
+  transform: scale(1.2);
+  margin-right:25px ;
+} */
+
+
+  
+}
+
+
+
+
+
+@media screen and (min-width: 1022px){
+
+.projectsContainer {
+  padding-left:19%;
+  padding-right:19%;
+    }
+
+  }
 
   /* #projects>div{
     vertical-align: middle;
