--- a/css/skills.css
+++ b/css/skills.css
@@ -9,8 +9,7 @@
   justify-content: space-around;
  color: var(--color-body);
  height: 100vh;
- min-height: 530px;
- max-height: 570px;
+ max-height: 650px;
  padding: 10%;
  vertical-align: middle;
  }
@@ -59,51 +58,58 @@
 
  .skillsItem:hover{
   color: var(--color-main);
+  border-color: var( --color-main);
  }
 
-/* 
-  
-  #skills .container-skills .text-box{
-    background: #cbcaca44;
-    width: 150px;
-    height: 153px;
-    margin-right:10px ;
-    margin-bottom: 18px;
+
+
+
+ @media screen and (min-width:400px){
+
+  .skillsContainer{
+    height: auto;
   }
-  
-  .container-skills .icon-div, .container-skills h3{
-    font-weight: 100 !important;
-  }
-  
-  .container-skills .icon-div:hover, .container-skills .text-box:hover h3{
-    background: var(--linear-bg-1);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow: 0px 0px #00000000;
-    font-weight: 900 !important;
-  }
-  
-  
-  #skills>div:nth-child(1){
-    margin: 1px;
-    padding: 2px;
-    width: 50% ;
-  
-    background-color: var( --color-2-bg);
+
+  .skillsContainer h2{
+    justify-content: center;
+     
+   }
+
+  .skillsContainer__hardSkills ul{
+    display: inline-block;
+    width: 100%;
+    height: auto;
+    text-align: center;
     
   }
   
-  #skills ul, #skills li{
-    text-align: left;
+  .skillsItem{
+    display: inline-block;
+    width:80px;
+    height:83px;
+    text-align: center;
+    padding: 13px;
+    margin: 4px;
+    vertical-align: bottom;
+    font-size: 0.9rem;
+    line-height: 1.1rem;
+    color: var(--color-icons);
+    font-weight: 500;
+    
   }
-  
-  
-  
+
+
+  .skillsItem i {
+    font-size: 2.6rem;
+    display: block;
+    margin-bottom: 13px;
+
+  }
+}
 
   
-
-/*   
-   */
-
-  
-  
+@media screen and (min-height: 638px) and (min-width: 800px){
+  .skillsContainer{
+    padding: 5%;
+  }
+}
