--- a/css/home.css
+++ b/css/home.css
@@ -133,7 +133,7 @@
 .aboutContainer {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     min-height: 100vh;
     height: max-content;
     padding: 10%;
@@ -151,6 +151,27 @@
     margin-top: 30px;
 }
 
+.aboutContainer .draw-container{
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+   }
+
+.aboutDraw{
+    display: flex;
+    height: 170px;
+    width: 220px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(../img/about.png);
+  }
+  
+  .dark .aboutDraw{
+  
+    background-image: url(../img/about_dark.png);
+  }
+  
 
 
 @media screen and (min-width: 822px) {
@@ -200,6 +221,26 @@
         padding-top: 5%;
         padding-bottom: 3%;
         height: calc(100vh-40px);
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
     }
+
+    .aboutDraw{
+     
+        height: 270px;
+        width: 320px;
+        
+      }
+      
+
+
+.aboutContainer__text{
+    width: 36vw;
+
+}
+
+    
 
 }
