--- a/css/buttons.css
+++ b/css/buttons.css
@@ -210,16 +210,15 @@
         display: none;
         position: fixed;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
         text-align: center;
         background-color: var(--bg-body-dark);
         margin: 0;
-        height: 50px;
+        height: 60px;
         left: 0;
         width: 100%;
         top: 52px;
-
         box-shadow: 0px 3px 6px -6px var(--color-body);
         -webkit-box-shadow: 0px 3px 6px -6px var(--color-body);
         -moz-box-shadow: 0px 3px 6px -6px var(--color-body);
@@ -250,6 +249,15 @@
 
     .menuButton{
         display: none;
+    }
+
+    .settingsList{
+       display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 600px;
+        margin-top: 5px;
+
     }
 
     .settingsContainer li {
